--- a/src/layout/Footer/Footer.scss
+++ b/src/layout/Footer/Footer.scss
@@ -85,11 +85,15 @@ footer {
           color: black;
           font-weight: 500;
           border: none;
+          cursor: pointer;
           font-size: 16px;
           transition: background-color 0.2s ease;
   
           &:hover {
-            background-color: #fbbf24;
+            background-color: black;
+            color: white;
+            border: 1px solid white;
+            
           }
         }
       }
